pgrx-tests/tests/compile-fail/no-arrays-of-arrays.stderr
error[E0277]: cannot generate SQL schema for this function
 --> tests/compile-fail/no-arrays-of-arrays.rs:7:1
  |
6 | #[pg_extern]
  | ------------ in this procedural macro expansion
7 | fn something<'a>(_mcx: &MemCx<'a>) -> PBox<'a, FlatArray<'a, FlatArray<'a, i32>>> {
  | ^^ some types in for<'b, 'a> fn(&'b MemCx<'a>) -> PBox<'a, FlatArray<'a, FlatArray<'a, i32>>> cannot be translated to SQL
  |
  = help: the trait `FunctionMetadata<_>` is not implemented for `for<'b, 'a> fn(&'b MemCx<'a>) -> PBox<'a, FlatArray<'a, FlatArray<'a, i32>>>`
  = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: `PBox<'_, FlatArray<'_, FlatArray<'_, i32>>>` has no representation in SQL
 --> tests/compile-fail/no-arrays-of-arrays.rs:6:1
  |
6 | #[pg_extern]
  | ^^^^^^^^^^^^ non-SQL type
  |
 ::: $WORKSPACE/pgrx/src/palloc/pbox.rs
  |
  | pub struct PBox<'mcx, T: ?Sized> {
  | -------------------------------- doesn't satisfy `_: SqlTranslatable`
  |
 ::: $WORKSPACE/pgrx/src/array/flat_array.rs
  |
  | pub struct FlatArray<'mcx, T: ?Sized> {
  | ------------------------------------- doesn't satisfy `FlatArray<'_, FlatArray<'_, i32>>: SqlTranslatable`
  |
note: if you're trying to build a new `PBox<'_, FlatArray<'_, FlatArray<'_, i32>>>`, consider using `PBox::<'mcx, T>::from_raw_in` which returns `PBox<'_, _>`
 --> $WORKSPACE/pgrx/src/palloc/pbox.rs
  |
  |     pub unsafe fn from_raw_in(ptr: NonNull<T>, _cx: &MemCx<'mcx>) -> PBox<'mcx, T> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: the following trait bounds were not satisfied:
          `FlatArray<'_, FlatArray<'_, i32>>: SqlTranslatable`
          which is required by `PBox<'_, FlatArray<'_, FlatArray<'_, i32>>>: SqlTranslatable`
          `PBox<'_, FlatArray<'_, FlatArray<'_, i32>>>: SqlTranslatable`
          which is required by `&PBox<'_, FlatArray<'_, FlatArray<'_, i32>>>: SqlTranslatable`
  = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)
